fixing overflow and some small bugs

--- a/src/app/info-panel/info-panel.css
+++ b/src/app/info-panel/info-panel.css
@@ -27,3 +27,7 @@
 u {
     color: black !important;
 }
+
+.info-panel{
+    margin-bottom:20px;
+}
